# ml-basics

./: README.md  pyproject.toml
ml_core/core_components/: linalg.py  model.py
ml_core/core_components/solvers/: coordinate_descent.py
ml_core/linear_models/: linear_regression.py  polynomial_regression.py  statistics.py
ml_core/reporting/: base_report.py  lr_report.py
ml_core/reporting/statistics/: linear_model_tests.py
ml_core/statistics/: statistical_tests.py
ml_core/tests/linear_models/: test_linear_regression.py
