[tool.poetry]
name = "ml-core"
version = "0.1.0"
description = "Implements from-scratch Machine Learning models for educational purposes"
authors = ["Michel Davidovich <micheldc55@gmail.com>"]
readme = "README.md"
packages = [{ include = "ml_core" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy= "1.26.3"
pandas= "2.2.2"
jupyterlab = "3.5.3"
python-dotenv = "^0.19.1"
scipy= "1.11.4"
pytest = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.10"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
